--- a/src/styles/components/time-picker.scss
+++ b/src/styles/components/time-picker.scss
@@ -24,14 +24,8 @@
   gap: 5px;
   align-items: center;
 
-  &[disabled=''] {
+  &:disabled {
     cursor: not-allowed;
-
-    :first-child {
-      background-color: variables.$disabled !important;
-      border-color: variables.$grey-40 !important;
-      pointer-events: none;
-    }
   }
 }
 
