--- a/src/styles/components/popover.scss
+++ b/src/styles/components/popover.scss
@@ -1,45 +1,36 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-.container {
-  @include mixins.miter(1, 1);
+.popover__target {
+  display: inline-block;
+}
+
+.popover__container {
+  @include mixins.miter;
+
   background-color: variables.$white;
-  width: auto;
-  height: auto;
   outline: none;
-  border: none;
-  display: block;
   position: absolute;
   z-index: 2;
 }
 
-.content-container {
+.popover__content {
   border: 1px solid variables.$grey-20;
   border-radius: 4px;
-  padding: 10px;
-  padding-bottom: 18px;
-
-  header {
-    :first-child &:not(i) {
-      font-family: variables.$font--primary !important;
-      font-weight: 600;
-      padding-bottom: 8px;
-
-      :first-child::before {
-        vertical-align: middle;
-        margin-right: 5px;
-      }
-    }
-  }
-
-  hr {
-    border: 1px solid #cecdd3;
-    margin: 5px -20px 14px;
-    border-bottom: none;
-  }
 }
 
-.arrow {
+.popover__header {
+  border-bottom: 1px solid #cecdd3;
+  padding: 10px;
+  font-weight: 600;
+  font-family: variables.$font--primary;
+}
+
+.popover__body {
+  padding: 10px;
+}
+
+.popover__arrow {
   content: '';
   margin: auto;
   position: absolute;
@@ -53,34 +44,26 @@
   background-color: white;
 }
 
-.top {
-  .arrow {
-    top: calc(100% - 7px);
-    left: 50%;
-    transform: translate(-50%) rotate(225deg);
-  }
+.popover__arrow--top {
+  top: calc(100% - 7px);
+  left: 50%;
+  transform: translate(-50%) rotate(225deg);
 }
 
-.bottom {
-  .arrow {
-    bottom: calc(100% - 7px);
-    left: 50%;
-    transform: translate(-50%) rotate(45deg);
-  }
+.popover__arrow--right {
+  bottom: 75%;
+  right: 99.5%;
+  transform: translate(50%) rotate(315deg);
 }
 
-.right {
-  .arrow {
-    bottom: 75%;
-    right: 99.5%;
-    transform: translate(50%) rotate(315deg);
-  }
+.popover__arrow--bottom {
+  bottom: calc(100% - 7px);
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
 }
 
-.left {
-  .arrow {
-    bottom: 75%;
-    left: calc(100% - 13px);
-    transform: translate(50%) rotate(135deg);
-  }
+.popover__arrow--left {
+  bottom: 75%;
+  left: calc(100% - 13px);
+  transform: translate(50%) rotate(135deg);
 }
