Add block prop to allow changing the trigger from inline-block to block

--- a/src/styles/components/popover.scss
+++ b/src/styles/components/popover.scss
@@ -1,8 +1,12 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-.popover {
-  display: flex;
+.popover__target {
+  display: inline-block;
+}
+
+.popover__target--block {
+  display: block;
 }
 
 .popover__content {
