--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use 'abstracts/functions';
 @use 'abstracts/variables';
 @use 'abstracts/mixins';
+@use 'abstracts/miters';
 
 @use 'base/base';
 @use 'base/typography';
