--- a/src/styles/components/textarea.scss
+++ b/src/styles/components/textarea.scss
@@ -8,9 +8,11 @@
 .textarea {
   --background-color: #fff;
   --cursor: default;
+  --handle-size: 16px;
 
   width: 350px;
   max-width: 100%;
+  font-size: 15px;
 
   &:focus-within {
     --miter-border-color: #{variables.$primary};
@@ -29,7 +31,6 @@
 .textarea {
   border: 0;
   padding: 0;
-  padding: 10px;
   font-family: variables.$font--secondary;
 }
 
@@ -41,7 +42,6 @@
 .textarea__label {
   display: block;
   color: variables.$black;
-  font-size: 15px;
 }
 
 .textarea__subtitle {
@@ -62,7 +62,7 @@
   display: block;
   border: 0;
   background: transparent;
-  padding: 15px;
+  padding: var(--p-2);
   resize: none;
   white-space: pre;
   overflow-wrap: normal;
@@ -72,7 +72,7 @@
 
   @supports not selector(::-webkit-scrollbar-track) {
     padding-bottom: 0;
-    margin-bottom: 15px;
+    margin-bottom: var(--m-2);
   }
 
   ::placeholder {
@@ -99,8 +99,8 @@
 
   &::-webkit-scrollbar {
     cursor: auto;
-    width: 15px;
-    height: 15px;
+    width: var(--handle-size);
+    height: var(--handle-size);
   }
 
   &::-webkit-scrollbar-track {
@@ -108,9 +108,8 @@
   }
 
   &::-webkit-scrollbar-track:vertical {
-    border-top-right-radius: 2px;
     border-left: 1px solid #cacccf;
-    margin-bottom: 15px;
+    margin-bottom: var(--handle-size);
   }
 
   &::-webkit-scrollbar-track:horizontal {
@@ -119,14 +118,13 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: 8px;
-    background-color: #C1C1C1;
+    background-color: #c1c1c1;
     border: 4px solid transparent;
-    border-right-width: 3px;
     background-clip: content-box;
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background-color: #888;
+    background-color: #7d7d7d;
     cursor: pointer;
   }
 }
@@ -147,17 +145,17 @@
 
   @supports not selector(::-webkit-scrollbar-track) {
     margin-bottom: 0;
-    padding-bottom: 10px;
+    padding-bottom: var(--p-2);
   }
 
 }
 
 .textarea__handle {
   position: absolute;
-  width: 15px;
-  height: 15px;
-  right: 1px;
-  bottom: 1px;
+  width: var(--handle-size);
+  height: var(--handle-size);
+  right: 0;
+  bottom: 0;
   cursor: se-resize;
   user-select: none;
   border-top: 1px solid transparent;
