--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -1,73 +1,68 @@
-$background: #090422;
 
 .tooltip {
+  --tooltip-background: #090422;
+  --tooltip-triangle-size: 5px;
+
   position: absolute;
+  font-size: 13px;
+  color: white;
+  padding: 10px;
+  z-index: 1;
+}
+
+.tooltip__content {
+  text-align: center;
+  background-color: var(--tooltip-background);
   padding: 5px;
   border-radius: 4px;
-  background: $background;
-  color: white;
-
-  text-align: center;
-  min-width: 83px;
   min-height: 34px;
-  z-index: 1;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-width: 83px;
 }
 
-.tooltip-content {
-  font-size: 13px;
-}
-
-.tooltip-content::after {
+.tooltip::after {
   content: '';
   position: absolute;
+  display: block;
   width: 0;
   height: 0;
 }
 
-.top {
-  .tooltip-content::after {
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid $background;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -25%);
-  }
+.tooltip--top::after,
+.tooltip--bottom::after {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.right {
-  .tooltip-content::after {
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-right: 5px solid $background;
-    bottom: 50%;
-    right: 100%;
-    transform: translateY(50%);
-  }
+.tooltip--left::after,
+.tooltip--right::after {
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.bottom {
-  .tooltip-content::after {
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 5px solid $background;
-    bottom: 100%;
-    left: 50%;
-    transform: translate(-50%, 25%);
-  }
+.tooltip--top::after {
+  bottom: 5px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid var(--tooltip-background);
 }
 
-.left {
-  .tooltip-content::after {
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-left: 5px solid $background;
-    bottom: 50%;
-    left: 100%;
-    transform: translateY(50%);
-  }
+.tooltip--right::after {
+  left: 5px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-right: 5px solid var(--tooltip-background);
+}
+
+.tooltip--bottom::after {
+  top: 5px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid var(--tooltip-background);
+}
+
+.tooltip--left::after {
+  right: 5px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 5px solid var(--tooltip-background);
 }
