--- a/src/assets/fonts/style.scss
+++ b/src/assets/fonts/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$prefect-font-family}';
   src:
-    url('#{$prefect-font-path}/#{$prefect-font-family}.ttf?fujx65') format('truetype'),
-    url('#{$prefect-font-path}/#{$prefect-font-family}.woff?fujx65') format('woff'),
-    url('#{$prefect-font-path}/#{$prefect-font-family}.svg?fujx65##{$prefect-font-family}') format('svg');
+    url('/#{$prefect-font-path}/#{$prefect-font-family}.ttf?fujx65') format('truetype'),
+    url('/#{$prefect-font-path}/#{$prefect-font-family}.woff?fujx65') format('woff'),
+    url('/#{$prefect-font-path}/#{$prefect-font-family}.svg?fujx65##{$prefect-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
