add title slot, rm title prop

--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -44,3 +44,9 @@
 .h4-bottom {
   margin-bottom: 36px;
 }
+
+.line-color {
+  background-color: variables.$secondary-pressed;
+  height: 1px;
+  border: 0;
+}
