--- a/src/assets/fonts/variables.scss
+++ b/src/assets/fonts/variables.scss
@@ -1,6 +1,7 @@
 $prefect-font-family: 'prefect-icons' !default;
 $prefect-font-path: 'fonts' !default;
 
+$pi-logs-fill: '\f1ef';
 $pi-awaiting-retry: '\f1e2';
 $pi-cancelled: '\f1e3';
 $pi-completed: '\f1e4';
