Update alignment for tag and input

--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -43,7 +43,7 @@
   *:after {
     align-items: center;
   }
-  align-items: center;
+  align-items: inherit;
   display: flex;
   justify-items: flex-end;
   margin-right: 10px;
