--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -24,6 +24,7 @@
 
     .tag {
       display: flex;
+      align-items: center;
       font-family: variables.$font--primary !important;
       font-size: 13px;
       font-weight: 600;
