--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -23,7 +23,8 @@
     display: flex;
     font-size: 14px;
     justify-content: center;
-    padding: 12px 24px;
+    height: 36px;
+    padding: 0 12px;
     user-select: none;
     background-clip: padding-box;
     -webkit-background-clip: padding-box;
