--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 
   .toast--content {
     background-color: variables.$primary;
