--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -6,9 +6,16 @@
     @include mixins.miter(2, 1);
   }
 
+  background: unset !important;
+  background-color: unset !important;
   border-radius: 4px;
   display: block;
   position: relative;
+  padding: unset !important;
+  padding-top: unset !important;
+  padding-left: unset !important;
+  padding-bottom: unset !important;
+  padding-right: unset !important;
 
   &.outlined {
     > div {
@@ -22,13 +29,13 @@
     display: flex;
     flex: 0 0 auto;
     flex-direction: column;
-    height: 100%;
-    padding-left: inherit;
-    padding-right: inherit;
-    padding-top: inherit;
-    padding-bottom: inherit;
+    margin: unset !important;
+    margin-top: unset !important;
+    margin-left: unset !important;
+    margin-bottom: unset !important;
+    margin-right: unset !important;
+
     overflow: hidden;
-    width: 100%;
 
     > header {
       border-radius: 3px;
@@ -41,10 +48,11 @@
       display: flex;
       flex-direction: row;
       flex-grow: 1;
+      height: 100%;
       overflow: auto;
       justify-content: flex-start;
       padding: inherit;
-      width: inherit;
+      width: auto;
 
       > aside {
         border-radius: inherit;
