--- a/src/styles/components/code.scss
+++ b/src/styles/components/code.scss
@@ -7,9 +7,11 @@
   font-family: variables.$font--secondary !important;
   max-width: 100%;
   min-width: 100px;
+  min-height: 60px;
   overflow-x: scroll;
-  padding: 12px;
+  padding: 18px;
   position: relative;
+  transform: translateZ(0);
 
   &__content {
     color: variables.$white;
@@ -19,9 +21,19 @@
     color: variables.$grey-40;
   }
 
+  &__copy-button-wrapper {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+  }
+
   &__copy-button {
-    bottom: 12px;
-    position: absolute;
-    right: 12px;
+    float: right;
+    margin-right: -18px;
+    margin-top: -18px;
+    transform: translate(-9px, 12px);
+    pointer-events: all;
   }
 }
