Remove horizontal padding on input component, convert to BEM

--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-.flexInput {
+.miter-input {
   *,
   *:before,
   *:after {
@@ -11,14 +11,13 @@
   align-items: flex-end;
   padding-bottom: 7px;
   border-bottom: 1px solid variables.$secondary-hover;
-  padding-left: 8px;
-  padding-right: 8px;
   height: 53px;
-  &.active {
+
+  &--active {
     border-bottom: 1px solid variables.$primary;
   }
 
-  &.disabled {
+  &--disabled {
     border-bottom: 1px solid variables.$secondary-hover;
     *,
     *:before,
@@ -28,16 +27,16 @@
     }
   }
 
-  &.invalid {
+  &--invalid {
     border-bottom: 1px solid variables.$error;
   }
 
-  &.hovered {
+  &--hovered {
     background-color: variables.$background;
   }
 }
 
-.prepend {
+.miter-input__prepend {
   *,
   *:before,
   *:after {
@@ -46,21 +45,22 @@
   align-items: inherit;
   display: flex;
   justify-items: flex-end;
-  margin-right: 10px;
+  margin-right: 0;
   height: 40px;
 }
 
-.append {
+.miter-input__append {
   align-items: center;
   display: flex;
   justify-items: flex-end;
   height: 40px;
   margin-left: auto;
-  &.active {
+
+  &--active {
     color: variables.$primary;
   }
 
-  &.invalid {
+  &--invalid {
     *,
     *:before,
     *:after {
@@ -69,7 +69,7 @@
   }
 }
 
-.input-text {
+.miter-input__text {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,7 +82,7 @@
   }
 }
 
-.input-label {
+.miter-input__label {
   font-size: 11px;
   line-height: 14px;
   padding-left: 2px;
@@ -91,22 +91,25 @@
   opacity: 80%;
 }
 
-.input {
+.miter-input__input {
   border: 0;
   line-height: 20px;
+
   &:focus {
     border-color: transparent;
     outline-style: none;
   }
-  &.hovered {
+
+  &--hovered {
     background-color: variables.$background;
   }
-  &.disabled {
+
+  &--disabled {
     background-color: transparent;
   }
 }
 
-.subtitle {
+.miter-input__subtitle {
   font-size: 11px;
   line-height: 14px;
   opacity: 60%;
