--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -86,7 +86,7 @@
 
 .miter-input__label {
   font-size: 13px;
-  font-family: 'input-sans';
+  font-family: variables.$font--secondary;
   line-height: 18px;
   letter-spacing: -0.09px;
   font-weight: 600;
@@ -95,7 +95,7 @@
 .miter-input__input {
   border: 0;
   line-height: 24px;
-  font-family: 'input-sans';
+  font-family: variables.$font--secondary;
   font-size: 16px;
   letter-spacing: -0.4px;
   padding-left: 0;
