--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -14,6 +14,9 @@
 }
 
 .tag-wrapper {
+  &.miter {
+    @include mixins.miter;
+  }
   &.flat {
     display: inline-block;
     padding: 0;
@@ -47,8 +50,6 @@
   }
 
   &:not(.flat) {
-    @include mixins.miter;
-
     border: none;
     border-radius: 3px;
     font-family: variables.$font--secondary;
