add demo, make miter default to true and make height 100%

--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -63,6 +63,10 @@
     vertical-align: middle;
     color: variables.$text--white;
 
+    .tag {
+      height: 100%;
+    }
+
     &.elevated {
       @include mixins.drop-shadow;
     }
