updated styles for toast messages

--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -11,11 +11,11 @@
 
   .toast--content {
     background-color: variables.$primary;
+    min-width: 200px;
     padding: 12px;
   }
 
   .toast--close-button {
     position: relative;
-    left: 8px;
   }
 }
