--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -64,8 +64,7 @@
     }
 
     &.hovered > :first-child {
-      background: variables.$secondary-hover;
-      border-color: variables.$secondary-pressed;
+      color:variables.$secondary-hover;
     }
 
     &.active > :first-child {
