--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -13,6 +13,7 @@
     background-color: variables.$primary;
     min-width: 200px;
     padding: 12px;
+    padding-right: 16px;
   }
 
   .toast--close-button {
