--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -64,10 +64,11 @@
     }
 
     &.hovered > :first-child {
-      color:variables.$secondary-hover;
+      opacity: 0.5;
     }
 
     &.active > :first-child {
+      opacity: 1;
       background: variables.$secondary-pressed;
       border-color: variables.$secondary-pressed;
     }
