--- a/src/styles/components/textarea.scss
+++ b/src/styles/components/textarea.scss
@@ -10,8 +10,8 @@
   --cursor: default;
   --handle-size: 16px;
 
-  width: 350px;
   max-width: 100%;
+  overflow: hidden;
   font-size: 15px;
 
   &:focus-within {
@@ -53,7 +53,7 @@
 .textarea__miter {
   background-color: var(--background-color);
   cursor: var(--cursor);
-  width: 350px;
+  max-width: 100%;
 
   @include mixins.miter-bordered-rounded;
 }
@@ -68,6 +68,7 @@
   overflow-wrap: normal;
   cursor: auto;
   width: 100%;
+  max-width: 100%;
   height: 125px;
 
   @supports not selector(::-webkit-scrollbar-track) {
